--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "styled-components": "^6.0.0-rc.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/react-redux": "^7.1.25",
