--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "projeto",
+  "name": "GameDev",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,15 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-query": "^3.39.3",
-    "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
-    "redux": "^4.2.1",
     "styled-components": "^6.0.0-rc.3"
   },
   "devDependencies": {
