--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
     "axios": "^1.4.0",
+    "firebase": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.10.1",
     "react-query": "^3.39.3",
