--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "firebase": "^10.0.0",
     "react": "^18.2.0",
@@ -19,7 +20,9 @@
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.10.1",
     "react-query": "^3.39.3",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
+    "redux": "^4.2.1",
     "styled-components": "^6.0.0-rc.3",
     "yup": "^1.2.0"
   },
